# Interactive_Learning

./: .gitignore  .impeccable.md  action_plan.md  add_context_menu.md  add_figures.md  article.md  batch process.md  bugs.md  detailed_plan.md  electrobun.config.ts  fable_suggestion.md  flow_modification.md  hyperlink.md  improvement.md  inspection.md  interactive-lecture-generator-design.md  level_up.md  levels.md  package.json  plan.md  prefetching.md  project_export.md  sidechat.md  tsconfig.json
assets/: app-icon.icns
example/: 017-section.md  timaeus-course.jsx
python/: pyproject.toml
python/src/learning_backend/: cli.py
python/src/preppy/: cli.py  diagnostics.py  hashing.py  inspect.py  models.py  paths.py  writers.py
python/src/preppy/engines/: epub_dom.py  fallback_pymupdf.py  pdf_docling.py
python/src/preppy/figures/: captions.py  export.py  filters.py
python/src/preppy/markdown/: clean.py  render.py
python/src/preppy/split/: classify.py  plan.py  slug.py
python/tests/: test_article_mode.py  test_boundary_pattern_validation.py  test_epub_chapter_titles.py  test_epub_dom_images.py  test_figure_filters.py  test_markdown_render.py  test_pdf_docling_boundaries.py  test_slug.py
scripts/: prepare-python-runtime.ts  smoke-python.ts
src/bun/: ai-provider-client.ts  ai-provider-settings.ts  annotation-service.test.ts  annotation-service.ts  annotation-store.test.ts  annotation-store.ts  app-menu.ts  app-window.ts  archive-reader.ts  archive-writer.test.ts  index.ts  (+41 more)
test-learning-system/: README.md  course_artifacts.json  index.html  server.mjs
(+64 files in other folders)
