[project]
name = "learning-backend"
version = "0.1.0"
description = "Document ingestion backend for Interactive Learning"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
pdf = ["pymupdf>=1.24.0", "pypdf>=4.0.0"]
test = ["pytest>=8.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/learning_backend"]
